crystal-facet-uml (1.19.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * xhtml output generates a css file
  * xhtml output keeps linebreaks in selected cases
  * bugfix: exporting docbook and xhtml via command line arguments
    works again, as in 1.16.1 (Closes: #1)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 33 Mar 2020 12:30:00 +0200

crystal-facet-uml (1.19.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * free text search
  * small memory leak in nav-tree-view fixed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 14 Mar 2020 12:30:00 +0200

crystal-facet-uml (1.18.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * internal: utf8 handling is limited to 21 bits (0-0x10ffff) (2003 standard)
  * internal: all error codes are positive bitmasks now
  * text entry reworked to not loose entered text at remote-xserver usage
  * name entry is immediately possible after object creation

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 03 Feb 2020 21:30:00 +0100

crystal-facet-uml (1.18.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * when exporting xhtml and docbook files, windows pathnames are supported

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 20 Jan 2020 21:30:00 +0100

crystal-facet-uml (1.18.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * the search view allows one to search for object ids
  * bugfix: when changing type of an object, lastest changes to name
    or description are not lost
  * pressing enter in name or stereotype field causes a save action

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 Jan 2020 20:30:00 +0100

crystal-facet-uml (1.17.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * cmake build config is less platform dependent
  * nav-tree: dragging diagrams shows a tree-depth aware insert line
  * while dragging, grid lines are displayed
  * the description text-view has scrollbars
  * in nav view, a click into the current diagram zooms to edit mode