@@ -1,10 +1,12 @@
 crystal-facet-uml (1.19.1) UNRELEASED; urgency=medium
 
   [ Andreas Warnke ]
-  * xhtml output generates a css file
-  * xhtml output keeps linebreaks in selected cases
+  * xhtml output generates a css file to allow defining own color schemes
+  * xhtml output keeps linebreaks in selected (md) cases
   * bugfix: exporting docbook and xhtml via command line arguments
     works again, as in 1.16.1 (Closes: #1)
+  * exported xhtml passes https://validator.w3.org/check (for quality.cfu1)
+  * exported xhtml/css shows chapter numbers
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 33 Mar 2020 12:30:00 +0200
 
